@@ -50,3 +50,5 @@ Jun 11 1998	 Add topology modification commands
 		 Keep name file
 Jun 15 1998	 Bug fixes: pre_boxsiz, pre_orient, pre_wrtrst, pre_wrttop
 Jun 24 1998	 Fix memory problem occurring in solvent-only preparations
+Jul 09 1998      Add positional fix commands
+                 Slightly increase hydrogen radius
